--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: The Plunger Magazine
+name: Plunger Magazine
 
 # Short bio or description (displayed in the header)
-description: Твоя главная опора в постсоветском образе жизни
+description: Твоя надежная опора в постсоветском образе жизни
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
