--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Plunger Magazine
 description: Твоя надежная опора в постсоветском образе жизни
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/SyntheticDream/SyntheticDream.github.io/master/images/plunger-logo.png
 
 #
 # Flags below are optional
