--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: http://gdurl.com/bfEc
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: plunger_staff@ukr.net
   facebook:
   flickr:
   github:
